--- a/assets/css/style-mobile.css
+++ b/assets/css/style-mobile.css
@@ -1,1 +1,99 @@
-/* Your styles here */
+body {
+  width: 450px;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: "Open Sans";
+  color: #393d41;
+  font-size: 1.3rem;
+  line-height: 1.65;
+  text-align: center;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Montserrat";
+  color: #25a2c3;
+  line-height: 1;
+}
+
+h1 {
+  font-family: "Montserrat";
+  color: #25a2c3;
+  line-height: 1;
+  font-size: 2.5rem;
+  padding: 30px;
+}
+
+h2 {
+  font-family: "Montserrat";
+  font-size: 2.2rem;
+  color: white;
+  line-height: 1;
+}
+
+h3 {
+  font-family: "Montserrat";
+  color: #25a2c3;
+  line-height: 1;
+}
+
+header div {
+  height: 120px;
+  background-color: black;
+  box-sizing: border-box;
+  padding: 35px;
+}
+
+header div img {
+  height: 50px;
+}
+
+header section {
+  height: 450px;
+  background-image: url(../images/banner.jpg);
+  background-size: cover;
+  background-position: 50%;
+  box-sizing: border-box;
+  padding: 35px;
+}
+
+button {
+  font-size: 1rem;
+  width: 175px;
+  height: 55px;
+  border-radius: 4px;
+  color: white;
+  font-family: "Montserrat";
+  background-color: #f04c2f;
+  border: none;
+  margin: 30px;
+}
+
+footer {
+  height: 385px;
+  background-color: #25a2c3;
+  box-sizing: border-box;
+  color: white;
+  padding: 50px;
+}
+
+ul {
+  list-style-type: none;
+  font-size: 1.2rem;
+  margin-top: 35px;
+}
+
+footer hr {
+  margin-top: 35px;
+  margin-bottom: 35px;
+  width: 230px;
+}
+
+footer p {
+  font-size: 1.1rem;
+}
+
+footer a {
+  color: white;
+}
