--- a/assets/css/style-mobile.css
+++ b/assets/css/style-mobile.css
@@ -14,7 +14,7 @@ h2,
 h3 {
   font-family: "Montserrat";
   color: #25a2c3;
-  line-height: 1;
+  line-height: 1.5;
 }
 
 h1 {
@@ -29,13 +29,14 @@ h2 {
   font-family: "Montserrat";
   font-size: 2.2rem;
   color: white;
-  line-height: 1;
+  line-height: 1.5;
 }
 
 h3 {
   font-family: "Montserrat";
   color: #25a2c3;
-  line-height: 1;
+  line-height: 2.5;
+  padding-top: 25px;
 }
 
 header div {
@@ -68,6 +69,52 @@ button {
   background-color: #f04c2f;
   border: none;
   margin: 30px;
+}
+
+#section1 {
+  height: 1100px;
+  box-sizing: border-box;
+  padding: 40px;
+}
+
+#section1 img {
+  border-radius: 100%;
+  width: 315px;
+  padding-top: 35px;
+}
+
+#section2 {
+  color: white;
+  height: 350px;
+  box-sizing: border-box;
+  background-color: #f04c2f;
+  padding-top: 60px;
+}
+
+#p1 {
+  font-size: 0.9em;
+  font-style: italic;
+  padding-top: 35px;
+}
+
+#p2 {
+  font-size: 1.1em;
+  padding-top: 35px;
+}
+
+#p3 {
+  font-size: 0.7em;
+}
+
+#section3 {
+  height: 1470px;
+  box-sizing: border-box;
+}
+
+#section3 div {
+  width: 395px;
+  height: 425px;
+  border: 1px solid #1d4865;
 }
 
 footer {
