--- a/assets/css/style-desktop.css
+++ b/assets/css/style-desktop.css
@@ -1,62 +1,57 @@
 body {
-  width: 450px;
+  width: 1920px;
   margin-left: auto;
   margin-right: auto;
   font-family: "Open Sans";
   color: #393d41;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   line-height: 1.65;
-  text-align: center;
-}
-
-h1,
-h2,
-h3 {
-  font-family: "Montserrat";
-  color: #25a2c3;
-  line-height: 1.5;
 }
 
 h1 {
   font-family: "Montserrat";
   color: #25a2c3;
   line-height: 1;
-  font-size: 2.5rem;
+  font-size: 2.8rem;
   padding: 30px;
 }
 
 h2 {
   font-family: "Montserrat";
-  font-size: 2.2rem;
+  font-size: 2.5rem;
   color: white;
   line-height: 1.5;
 }
 
 h3 {
   font-family: "Montserrat";
+  font-size: 1.5rem;
   color: #25a2c3;
   line-height: 2.5;
   padding-top: 25px;
 }
 
 header div {
-  height: 120px;
+  height: 155px;
   background-color: black;
   box-sizing: border-box;
   padding: 35px;
 }
 
 header div img {
-  height: 50px;
+  height: 80px;
+  text-align: left;
 }
 
 header section {
-  height: 450px;
+  height: 700px;
   background-image: url(../images/banner.jpg);
   background-size: cover;
-  background-position: 50%;
   box-sizing: border-box;
-  padding: 35px;
+  text-align: center;
+  padding: 200px;
+  padding-left: 500px;
+  padding-right: 500px;
 }
 
 button {
@@ -71,8 +66,12 @@ button {
   margin: 30px;
 }
 
+main {
+  text-align: center;
+}
+
 #section1 {
-  height: 1100px;
+  height: 1000px;
   box-sizing: border-box;
   padding: 40px;
 }
@@ -85,88 +84,101 @@ button {
 
 #section2 {
   color: white;
-  height: 350px;
+  height: 530px;
   box-sizing: border-box;
   background-color: #f04c2f;
-  padding-top: 60px;
+  padding-top: 140px;
 }
 
 #p1 {
-  font-size: 0.9em;
+  font-size: 2.2rem;
   font-style: italic;
-  padding-top: 35px;
+  padding-top: 25px;
 }
 
 #p2 {
-  font-size: 1.1em;
-  padding-top: 35px;
+  font-size: 1.7rem;
+  padding-top: 25px;
 }
 
 #p3 {
-  font-size: 0.7em;
+  font-size: 1.2rem;
 }
 
 #section3 {
-  height: 1470px;
+  height: 885px;
   box-sizing: border-box;
-  padding: 30px;
+  padding: 120px;
 }
 
 #section3 div {
-  width: 395px;
-  height: 425px;
+  width: 500px;
+  height: 550px;
   border: 1px solid #dee1e3;
   box-sizing: border-box;
   margin: 30px auto;
-  padding: 240px 25px 5px 25px;
+  padding: 360px 25px 5px 25px;
+  display: inline-block;
+  margin: 20px;
 }
 
 #section3 p {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
 }
 
 #block1 {
   background-image: url(../images/foto1.jpg);
-  background-size: contain;
+  background-size: 112%;
+  background-position: 51% 0%;
   background-repeat: no-repeat;
 }
 
 #block2 {
   background-image: url(../images/foto2.jpg);
-  background-size: contain;
+  background-size: 115%;
+  background-position: 38% 0%;
   background-repeat: no-repeat;
 }
 
 #block3 {
   background-image: url(../images/foto3.jpg);
-  background-size: contain;
+  background-size: 124%;
+  background-position: 51% 0%;
   background-repeat: no-repeat;
 }
 
 footer {
-  height: 385px;
+  height: 475px;
   background-color: #25a2c3;
   box-sizing: border-box;
+  text-align: center;
   color: white;
-  padding: 50px;
+  padding: 80px;
 }
 
 ul {
+  padding-left: 740px;
   list-style-type: none;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   margin-top: 35px;
+  text-align: left;
 }
 
 footer hr {
   margin-top: 35px;
   margin-bottom: 35px;
-  width: 230px;
+  width: 280px;
 }
 
 footer p {
-  font-size: 1.1rem;
+  font-size: 1rem;
+  text-align: center;
 }
 
 footer a {
   color: white;
+}
+
+footer h2 {
+  font-size: 3.2rem;
 }
